# video_manipulator

./: CMakeLists.txt  README.md  package.xml
include/video_manipulator/: node.hpp
launch/: video_manipulator.launch
src/: main.cpp  node.cpp
