<?xml version="1.0"?>
<package format="2">
  <name>video_manipulator</name>
  <version>1.0.0</version>
  <description>The video_manipulator package</description>

  <maintainer email="yz1938@naver.com">alfred</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <url type="website">http://github.com/Odimetry/video_manipulator</url>

  <author email="yz1938@naver.com">alfred</author>
  <author email="yejunson5_5@naver.com">ethan</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>OpenCV</build_export_depend>
  <build_export_depend>cmake_modules</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>moveit_core</build_export_depend>
  <build_export_depend>moveit_msgs</build_export_depend>
  <build_export_depend>moveit_ros_planning</build_export_depend>
  <build_export_depend>moveit_ros_planning_interface</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>OpenCV</exec_depend>
  <exec_depend>cmake_modules</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
